# calfsay

./: Cargo.toml  README.md
cows/: LICENSE-cowsay
src/: main.rs
