[package]
name = "calfsay"
version = "0.1.0"
authors = ["David Weis <davidmichaelweis@gmail.com>"]
edition = "2018"

description = "Another rust implementation of cowsay"
homepage = "https://github.com/dmweis/calfsay"
repository = "https://github.com/dmweis/calfsay"
readme = "README.md"
keywords = ["cowsay", "calfsay", "alpacas"]
categories = []
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
